# PolymarketBot

./: .env.example  Dockerfile  README.md  dashboard.py  pyproject.toml
.github/workflows/: ci.yml
ops/: prometheus_alerts.yml
scripts/: replay_runtime.py  smoke_runtime.py
src/: config.py  geo.py  logging_utils.py  main.py  metrics.py
src/auth/: __init__.py  credentials.py
src/execution/: heartbeat_monitor.py  order_builder.py  trader.py
src/feeds/: chainlink_direct.py  clob_ws.py  coinbase_ws.py  rtds.py
src/markets/: fee_rate_cache.py  gamma_cache.py  token_metadata_cache.py
src/ops/: __init__.py  recorder.py
src/replay/: __init__.py  store.py
src/strategy/: calibration.py  calibration_eval.py  execution_mode.py  parameter_eval.py  quorum_health.py  replay_engine.py  state_machine.py
src/utils/: fees.py  price_validation.py  rounding.py  symbols.py  time.py
tests/: smoke_runtime.py  test_batch_submission.py  test_calibration.py  test_clob_parser.py  test_credentials.py  test_ev_selection.py  test_fee_handling.py  test_fee_rate_cache.py  test_feed_fail_closed.py  test_gamma_filtering.py  test_geoblock.py  test_heartbeat_monitor.py  test_market_validation.py  test_parameter_eval.py  test_quorum_health.py  test_replay_engine.py  test_risk_limits.py  test_rounding.py  test_rtds_feed.py  test_runtime_resilience.py  test_settings_profiles.py  test_smoke_runtime.py  test_time_windows.py  test_token_constraints.py  test_trader_clob_auth.py  test_trader_risk_state.py
tests/integration/: test_trader_clob_auth.py  test_websocket_runtime_flows.py
(+13 files in other folders)
