[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-bot"
version = "0.1.0"
description = "Production-ready Polymarket BTC Up/Down hammer bot"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.9.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.1",
  "python-dotenv>=1.0.1",
  "structlog>=24.1.0",
  "websockets>=12.0",
  "prometheus-client>=0.20.0",
  "py-clob-client>=0.34.1,<0.35",
  "orjson>=3.10.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
